# Chat2Bag

./: .gitignore  app.py  pyproject.toml
config/: logging.yaml  settings.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/bags/: bag-list.tsx  bag-scanner.tsx
frontend/src/components/layout/: main-layout.tsx  sidebar.tsx
frontend/src/components/search/: image-card.tsx  results-grid.tsx  search-bar.tsx  sequence-viewer.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  skeleton.tsx
frontend/src/hooks/: use-bags.ts  use-search.ts  use-sequence-viewer.ts
src/api/: __init__.py  bags.py  chat_routes.py  dependencies.py  image.py  indexing.py  search_routes.py  state.py
src/core/: __init__.py  app_config.py  schema_versions.py  settings.py  storage.py
src/ingestion/: bag_parser.py  indexer.py
src/retriever/: global_search.py  video_chat.py
src/services/: __init__.py  chat_service.py  component_factory.py  indexing_service.py  search_service.py
src/utils/: logging_utils.py  paths.py
static/: index.html
static/assets/: index-B457x0AB.css  index-C4WiNpG0.css  index-CRVN4N6h.css  index-CT7kO6Hx.js  index-CedeJkhT.js  index-CvaA92M9.js  index-LDT7-Llc.css  index-qLqNbxvY.js
tests/: test_api.py
