[project]
name = "bag-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.128.0",
    "lancedb>=0.27.1",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.32.5",
    "rosbags>=0.11.0",
    "rosbags-image>=0.10.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
